Added selected code file into the code editor class

--- a/src/main/resources/editor/editor.html
+++ b/src/main/resources/editor/editor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Editor</title>
+    <title>Harmony Editor Powered By Ace</title>
     <style type="text/css" media="screen">
     body {
         overflow: hidden;
@@ -21,9 +21,7 @@
 </head>
 <body>
 
-<pre id="editor">class GameObject:
-    Console.log("Hello, World!")
-</pre>
+<pre id="editor"></pre>
 
 <script src="js/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
