--- a/src/main/resources/editor/editor.html
+++ b/src/main/resources/editor/editor.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Harmony Editor Powered By Ace</title>
     <style type="text/css" media="screen">
     body {
@@ -20,6 +20,8 @@
   </style>
 </head>
 <body>
+
+<buffer id="bufferObject" style="display: none"></buffer>
 
 <pre id="editor"></pre>
 
