--- a/src/main/resources/editor/editor.html
+++ b/src/main/resources/editor/editor.html
@@ -29,7 +29,7 @@
 <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/twilight");
-    editor.session.setMode("ace/mode/python");
+    editor.session.setMode("ace/mode/java");
 </script>
 
 </body>
