Changed the comments in index.html

--- a/src/main/resources/HarmonyJS/index.html
+++ b/src/main/resources/HarmonyJS/index.html
@@ -15,8 +15,9 @@
     <script src="engine/states.js"></script>
 
     <!-- Client Scripts -->
+    <!--__REPLACE_HERE__-->
 
-    <!-- Client Unaccessible Scripts -->
+    <!-- Client Inaccessible Scripts -->
     
     <!-- Main Harmony.js -->
     <script src="engine/harmony.js"></script> 
